[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'pixel-chain-node-runtime'
version = '1.0.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    'pixel-chain/std',
]
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
branch = 'v1.0'
#rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'

[dependencies.pixel-chain]
default_features = false
path = "../../pixel-chain"
