[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'pixel-chain-node-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.pixel-chain-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['pixel-chain-node-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
